--- a/GameCatalog.xcodeproj/xcshareddata/xcschemes/GameCatalog.xcscheme
+++ b/GameCatalog.xcodeproj/xcshareddata/xcschemes/GameCatalog.xcscheme
@@ -28,6 +28,28 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "51FE432C2969284F00DCA835"
+               BuildableName = "GameCatalogTests.xctest"
+               BlueprintName = "GameCatalogTests"
+               ReferencedContainer = "container:GameCatalog.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "51FE43392969285F00DCA835"
+               BuildableName = "GameCatalogUITests.xctest"
+               BlueprintName = "GameCatalogUITests"
+               ReferencedContainer = "container:GameCatalog.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
